--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,8 @@ readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
     "dash>=2.18.2",
+    "folium>=0.19.4",
     "ipykernel>=6.29.5",
     "pandas>=2.2.3",
+    "seaborn>=0.13.2",
 ]
